6.51_01
    Bug Fixes
    * On 5.10 "make ppd" would generate the wrong ARCHITECTURE saying the
      version is 5.1 instead of 5.10.
    * Our pod2man emulation now requires an argument to --perm_rw.
      [rt.cpan.org 35190] (imacat)

    Test Fixes
    * basic.t will not leave a "bin" environment variable defined on VMS.
      [rt.cpan.org 42150] (John E. Malmberg)
    * Made the tests work ok on systems whose makes assume that files which
      have the same mod time are out of date.  This is often the case for
      the tests which generate files and run make rapidly.
      [rt.cpan.org 29955] (Ken Hirsch)
    * skip test numbers were wrong on VMS in t/basic.t
      [rt.cpan.org 43511] (John E. Malmberg)

    VMS
    * Fixed a few calls to catfile() that should be catdir().
      (John E. Malmberg)
    * Override catdir() and catfile() to expand macros.  This is normally done
      inside File::Spec::VMS but is really a MakeMaker-only thing.
      (John E. Malmberg)


6.50  Sun Mar 22 12:28:06 PDT 2009
    Windows    
    * Remove the special checks for compilers that need a "manifest".  Instead,
      the code will just be a no-op if there's no manifest.  Or something.
      I dunno, I'm hoping Jan and Steve know what they're doing.
      [rt.perl.org 61492]


6.49_01  Thu Feb 19 17:06:36 PST 2009
    New OS Support
    * Recognize "Haiku", a resurrection of BeOS.

    New Features
    - META.yml now includes ExtUtils::MakeMaker in build_requires by
      default.

    Test Fixes
    - ExtUtils::Install 1.51 changed its output breaking some tests that
      were looking for /^Writing/ [rt.cpan.org 42927]

    Bug Fixes
    - Upgrade bundled modules:  ExtUtils::Install 1.52, ExtUtils::Command
      1.16, ExtUtils::Manifest 1.56.

    Other
    - The MakeMaker repository moved slightly.  Changed the metadata to
      reflect this.  [rt.cpan.org 41571]


6.48  Mon Oct 20 11:18:13 PDT 2008
    Test Fixes