@@ -1,4 +1,9 @@
 6.51_01
+    New Features
+    * Module installation will not be stopped by a broken Pod::Man.
+      Man pages will just not be installed.
+      [rt.cpan.org 43546] (Jesse Vincent)
+
     Bug Fixes
     * On 5.10 "make ppd" would generate the wrong ARCHITECTURE saying the
       version is 5.1 instead of 5.10.
